--- a/package.json
+++ b/package.json
@@ -7,29 +7,34 @@
     "dev": "vite",
     "check-types": "npx tsc --pretty --noEmit",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx @biomejs/biome lint ./",
+    "format:check": "npx @biomejs/biome check ./src",
+    "format": "npx @biomejs/biome format --write ./src"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tremor/react": "^3.14.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.331.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "sonner": "^1.4.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.15",
