--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@tanstack/react-router": "^1.16.6",
 		"@tremor/react": "^3.14.0",
 		"axios": "^1.6.7",
 		"class-variance-authority": "^0.7.0",
@@ -29,7 +30,6 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.50.1",
-		"react-router-dom": "^6.22.1",
 		"sonner": "^1.4.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.2.1",
@@ -39,6 +39,7 @@
 		"@biomejs/biome": "1.5.3",
 		"@playwright/test": "^1.41.2",
 		"@tailwindcss/forms": "^0.5.7",
+		"@tanstack/router-vite-plugin": "^1.16.5",
 		"@types/node": "^20.8.4",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
